tests/valid/borrow/struct_sibling_field_borrow.facet
struct Pair {
  x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted () {
  let p: unrestricted Pair = Pair { x = 1, y = true };
  let _ = (&p.x);
  let _ = (&p.y);
  ()
}
